--- a/cart.html
+++ b/cart.html
@@ -7,74 +7,84 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            background-color: #000000;
-            color: #FFD700;
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-       
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            color: #FFD700;
-            margin-bottom: 20px;
-            font-family: 'Montserrat', sans-serif;
-        }
-        .cart-items {
-            list-style: none;
-            padding: 0;
-            margin-bottom: 20px;
-        }
-        .cart-items li {
-            background-color: #1A1A1A;
-            border: 1px solid #FFD700;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .cart-items button {
-            background-color: #FFD700;
-            color: #000;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .cart-items button:hover {
-            background-color: #e6c200;
-        }
-        .cart-total {
-            font-size: 1.5em;
-            margin-bottom: 20px;
-        }
-        .checkout-button {
-            background-color: #FFD700;
-            color: #000;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            cursor: pointer;
-        }
-        .checkout-button:hover {
-            background-color: #e6c200;
-        }
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 20px;
-            border-top: 1px solid #FFD700;
-            color: #FFD700;
-        }
+       body {
+    background-color: #000000;
+    color: #FF0000;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+}
+
+h1 {
+    color: #FF0000;
+    margin-bottom: 20px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.cart-items {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+.cart-items li {
+    background-color: #1A1A1A;
+    border: 1px solid #FF0000;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-items button {
+    background-color: #FF0000;
+    color: #000;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.cart-items button:hover {
+    background-color: #D40000;
+}
+
+.cart-total {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.checkout-button {
+    background-color: #FF0000;
+    color: #000;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.checkout-button:hover {
+    background-color: #D40000;
+}
+
+footer {
+    text-align: center;
+    margin-top: 40px;
+    padding: 20px;
+    border-top: 1px solid #FF0000;
+    color: #FF0000;
+}
+
     </style>
 </head>
 <body>
